examples/src/main/java/eu/binarystars/cleancode/errors/InternalProblemException.java
package eu.binarystars.cleancode.errors;

class InternalProblemException extends ServiceException {
}
